implementation_layer/toolkit_demo_app/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gaik-demo
  labels:
    app: gaik-demo
  annotations:
    haproxy.router.openshift.io/timeout: 15m
    haproxy.router.openshift.io/response-buffering: "off"
    haproxy.router.openshift.io/disable-cookies: "true"
    haproxy.router.openshift.io/proxy-body-size: 128m
spec:
  host: gaik-demo.2.rahtiapp.fi
  to:
    kind: Service
    name: gaik-demo
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
