implementation_layer/toolkit_demo_app/openshift/staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaik-demo-staging
  labels:
    app: gaik-demo-staging
spec:
  selector:
    app: gaik-demo-staging
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gaik-demo-api-staging
  labels:
    app: gaik-demo-api-staging
spec:
  selector:
    app: gaik-demo-api-staging
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gaik-demo-staging
  labels:
    app: gaik-demo-staging
  annotations:
    haproxy.router.openshift.io/disable-cookies: "true"
    haproxy.router.openshift.io/proxy-body-size: 128m
    haproxy.router.openshift.io/response-buffering: "off"
    haproxy.router.openshift.io/timeout: 15m
spec:
  host: gaik-demo-staging.2.rahtiapp.fi
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gaik-demo-staging
    weight: 100
